# windows-moukaeritai-work

./: .gitattributes  .gitignore  LICENSE  README.md  date.txt  filelist.efu  pyproject.toml  remove_desktop_ini.css  remove_desktop_ini.py  test.txt
.github/workflows/: merge-remove-desktop-ini.yml  release-remove-desktop-ini.yml  release.yml  split-remove-desktop-ini.yml  update-remove-desktop-ini.yml
filelist_mcp_server/: .gitignore  GEMINI_CLI.md  MCP.md  README.md  gemini-cli.config.toml  pyproject.toml
filelist_mcp_server/src/filelist_mcp_server/: catalog.py  exceptions.py  handlers.py  http_server.py  main.py  server.py
filelist_mcp_server/tests/: test_catalog.py  test_http.py  test_protocol.py  test_server.py
performance-counter/: CounterList.txt  export_all_perf_counters.ps1
remove-desktop-ini/: .gitattributes  .gitignore  pyproject.toml  remove_desktop_ini.css  remove_desktop_ini.py
remove-desktop-ini/src/remove_desktop_ini/: __init__.py  remove_desktop_ini.css
src/remove_desktop_ini/: app.py
tests/: http_test.py  test_app.py
